[homepage-02] scroll is not fixed

--- a/mealify/View/Base.lproj/Main.storyboard
+++ b/mealify/View/Base.lproj/Main.storyboard
@@ -923,8 +923,8 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KZp-WH-sbo">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="826"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lgt-J1-xYZ" userLabel="ContentView">
-                                        <rect key="frame" x="67" y="349" width="375" height="826"/>
+                                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Lgt-J1-xYZ" userLabel="ContentView">
+                                        <rect key="frame" x="-0.17647058817328798" y="-63.8235294117801" width="375" height="826.00000000000023"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6mK-gM-rtO" userLabel="center">
                                                 <rect key="frame" x="167" y="403" width="42" height="21"/>
